Wire form to "add" button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1 class="site-title">Shelved</h1>
         <div class="btns-container">
-            <button class="header-btn">Add a book</button>
+            <button class="header-btn" id="add-book-button">Add a book</button>
             <button class="header-btn">Sort</button>
         </div>
     </header>
@@ -33,7 +33,7 @@
                 <label class="form-label" for="read-or-not">Have you read it?</label>
                 <input type="checkbox" name="read-or-not">
             </div>
-            <input type="submit" value="Add">
+            <input type="submit" id="submit-book-info" value="Add">
         </form>
     </div>
 
