--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
     <title>Bookshelf</title>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+      rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
