--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header>
         <h1 class="site-title">Shelved</h1>
         <div class="btns-container">
-            <button class="header-btn" id="add-book-button" >Add a book</button>
+            <button class="header-btn" id="add-book-button">Add a book</button>
             <button class="header-btn">Sort</button>
+            <button class="header-btn" id="clear-shelves-button">Clear shelves</button>
         </div>
     </header>
 
