--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Bookshelf</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
       rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
