Change color palette, add sort arrows

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="btns-container">
             <button class="header-btn" id="add-book-button">Add a book</button>
             <div class="sort-container">
-                <p class="sort-label">Sort:</p>
+                <p class="sort-label">Sort <span class="material-icons-outlined" id="sort-label-icon">height</span></p>
                 <button class="sort-btn sort-btn-unselected" value="title">Title</button>
                 <button class="sort-btn sort-btn-unselected" value="author">Author</button>
                 <button class="sort-btn sort-btn-unselected" value="pages">Pages</button>
