--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 
 <body>
     <header>
-        <h1 class="site-title">Shelved</h1>
-        <div class="btns-container">
-            <button class="header-btn" id="add-book-button">Add a book</button>
-            <div class="sort-container">
-                <p class="sort-label">Sort <span class="material-icons-outlined" id="sort-label-icon">height</span></p>
-                <button class="sort-btn sort-btn-unselected" value="title">Title</button>
-                <button class="sort-btn sort-btn-unselected" value="author">Author</button>
-                <button class="sort-btn sort-btn-unselected" value="pages">Pages</button>
-                <button class="sort-btn sort-btn-unselected" value="hasRead">Read or not</button>
+        <div class="logo-container">
+            <h1 class="site-title">Shelved</h1>
+        </div>
+
+        <div class="sort-container">
+            <div class="btns-container">
+                <button class="header-btn" id="add-book-button">Add a book</button>
+                <button class="header-btn" id="clear-shelves-button">Clear shelves</button>
             </div>
-            <button class="header-btn" id="clear-shelves-button">Clear shelves</button>
+            <p class="sort-label">Sort <span class="material-icons-outlined" id="sort-label-icon">height</span></p>
+            <button class="sort-btn sort-btn-unselected" value="title">Title</button>
+            <button class="sort-btn sort-btn-unselected" value="author">Author</button>
+            <button class="sort-btn sort-btn-unselected" value="pages">Pages</button>
+            <button class="sort-btn sort-btn-unselected" value="hasRead">Read?</button>
         </div>
     </header>
 
