--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Bookshelf</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@400;500;600;700;800&family=Bellefair&family=Cormorant+Upright:wght@500;600;700&family=Dancing+Script:wght@400;500;600;700&family=Fleur+De+Leah&family=Gentium+Basic&display=swap" rel="stylesheet">
@@ -59,6 +59,11 @@
         <div class="shelves shelf1"></div>
         <div class="shelves shelf2"></div>
     </div>
+
+    <footer>
+        <p>Made by Cutler Sheridan.</p>
+        <p>See more <a href="cutlersheridan.github.io/portfolio">here</a>.</p>
+    </footer>
     
     <script src="scripts/main.js"></script>
 </body>
